Fix navbar on bottom covering stuff up.

--- a/frontend/www/styles.css
+++ b/frontend/www/styles.css
@@ -115,7 +115,7 @@ body {
     border-top: 1px solid #ddd;
     display: flex;
     justify-content: space-between;
-    z-index: 10;
+    z-index: 100;
 }
 
 /* Canvas styles */
